--- a/TTCS-hotfix/app/src/main/res/values/colors.xml
+++ b/TTCS-hotfix/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="light_gray">#F0F0F0</color>
+    <color name="red_primary">#E4252A</color>
+    <color name="gray">#757575</color>
 </resources>
