--- a/TTCS-hotfix/app/src/main/res/layout/activity_main_menu.xml
+++ b/TTCS-hotfix/app/src/main/res/layout/activity_main_menu.xml
@@ -238,6 +238,7 @@
                     <Button
                         android:layout_width="84dp"
                         android:layout_height="91dp"
+                        android:id="@+id/chatbot"
                         android:background="@drawable/ai"
                         app:tint="@color/red_primary" />
 
